受付時間を日時に変更。リストにないバーコード番号の場合は、新規登録できるようにする。その場合は、リストの最終行に追加。バーコード入力ボックスを全角入力不可に変更。健診簿に特殊健診項目を複数追加し、追加項目や尿検査を確認ダイアローグに表示できるように改良。

--- a/BarcodeReceptionAssistant/App.config
+++ b/BarcodeReceptionAssistant/App.config
@@ -31,6 +31,9 @@
             <setting name="入力カラム名" serializeAs="String">
                 <value>整理番号</value>
             </setting>
+            <setting name="出力ファイル名" serializeAs="String">
+                <value>受付後健診簿</value>
+            </setting>
         </BarcodeReceptionAssistant.My.MySettings>
     </userSettings>
 </configuration>
