誕生日カラム追加 整理番号確定前表示 各カラムフィルタ機能追加

--- a/BarcodeReceptionAssistant/My Project/Settings.settings
+++ b/BarcodeReceptionAssistant/My Project/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="出力ファイル名" Type="System.String" Scope="User">
       <Value Profile="(Default)">受付後健診簿</Value>
     </Setting>
+    <Setting Name="白紙バーコードNo" Type="System.String" Scope="User">
+      <Value Profile="(Default)">XXXXX</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
