--- a/BarcodeReceptionAssistant/App.config
+++ b/BarcodeReceptionAssistant/App.config
@@ -34,6 +34,9 @@
             <setting name="出力ファイル名" serializeAs="String">
                 <value>受付後健診簿</value>
             </setting>
+            <setting name="白紙バーコードNo" serializeAs="String">
+                <value>XXXXX</value>
+            </setting>
         </BarcodeReceptionAssistant.My.MySettings>
     </userSettings>
 </configuration>
