健診簿書式変更に伴い、個人情報カラムと検査項目カラム、特殊用途カラムを追加。確認ダイアローグのＵＩを変更。

--- a/BarcodeReceptionAssistant/App.config
+++ b/BarcodeReceptionAssistant/App.config
@@ -37,6 +37,22 @@
             <setting name="白紙バーコードNo" serializeAs="String">
                 <value>XXXXX</value>
             </setting>
+            <setting name="ダイアローグ表示カラム" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                        xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+                        <string>性別</string>
+                        <string>所属</string>
+                        <string>フリガナ</string>
+                        <string>生年月日</string>
+                        <string>年齢</string>
+                        <string>整理番号</string>
+                        <string>コース</string>
+                        <string>協会けんぽ</string>
+                        <string>備考</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
         </BarcodeReceptionAssistant.My.MySettings>
     </userSettings>
 </configuration>
