--- a/BarcodeReceptionAssistant/BarcodeReceptionAssistant.vbproj
+++ b/BarcodeReceptionAssistant/BarcodeReceptionAssistant.vbproj
@@ -11,7 +11,7 @@
     <AssemblyName>BarcodeReceptionAssistant</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>\\192.168.11.1\共有\yasuno\システム開発\バーコード受付処理ツール\application\</PublishUrl>
@@ -35,6 +35,7 @@
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -208,7 +209,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="BarcodeAssistant.ico" />
-    <None Include="Resources\BarcodeAssistant.ico" />
+    <Content Include="Resources\BarcodeAssistant.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
