--- a/BarcodeReceptionAssistant/BarcodeReceptionAssistant.vbproj
+++ b/BarcodeReceptionAssistant/BarcodeReceptionAssistant.vbproj
@@ -14,9 +14,9 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>\\192.168.11.1\共有\yasuno\システム開発\バーコード受付処理ツール\application\</PublishUrl>
+    <PublishUrl>C:\Users\yasun\Documents\dist\バーコード受付処理ツール\</PublishUrl>
     <Install>true</Install>
-    <InstallFrom>Unc</InstallFrom>
+    <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateMode>Background</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
@@ -24,12 +24,13 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
+    <UpdateUrl>http://localhost/BarcodeReceptionAssistant/</UpdateUrl>
     <ProductName>バーコード受付処理ツール</ProductName>
     <PublisherName>青葉レントゲン　情報処理課</PublisherName>
     <SuiteName>Aoba ICT Solution</SuiteName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>18</ApplicationRevision>
+    <ApplicationRevision>19</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -69,10 +70,10 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>6BDDEA8528F82886C522F944EDCDE1D9560D2B47</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>55725CAC25540E5FA1B9CE8B18049CD6E4FE164B</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>BarcodeReceptionAssistant_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>BarcodeReceptionAssistant_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -177,6 +178,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="BarcodeReceptionAssistant_1_TemporaryKey.pfx" />
     <None Include="BarcodeReceptionAssistant_TemporaryKey.pfx" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
